Cycles Lower Poly Meshes Having Obvious Black Edges When Shade Smoothed #91064

Closed
opened 2021-08-31 05:37:17 +02:00 by Zijun Zhou · 32 comments
Contributor

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-30 22:27, hash: bd67bf4d10
Worked: 3.0.0 Alpha, branch: master, commit date: 2021-08-22 16:45, hash: b477333473
Caused by cd118c5581

Short description of error
Lower-poly shade-smoothed meshes would look like this in the latest 3.0 Alpha:
image.png

For comparison this is a screenshot from 3.0.0 Alpha, branch: master, commit date: 2021-08-22 16:45, hash: b477333473:
image.png

Exact steps for others to reproduce the error

  1. Select default cube, and right click shade smooth, see the issue immediately
  2. add subsurf modifier, see how the black edge gets thinner as the poly goes higher

or reproduce from file

  • Open .blend file
  • Switch to rendered mode

Test File:
#91064.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-30 22:27, hash: `bd67bf4d10` Worked: 3.0.0 Alpha, branch: master, commit date: 2021-08-22 16:45, hash: `b477333473` Caused by cd118c5581 **Short description of error** Lower-poly shade-smoothed meshes would look like this in the latest 3.0 Alpha: ![image.png](https://archive.blender.org/developer/F10355270/image.png) For comparison this is a screenshot from 3.0.0 Alpha, branch: master, commit date: 2021-08-22 16:45, hash: `b477333473`: ![image.png](https://archive.blender.org/developer/F10355268/image.png) **Exact steps for others to reproduce the error** 1. Select default cube, and right click shade smooth, see the issue immediately 2. add subsurf modifier, see how the black edge gets thinner as the poly goes higher --- or reproduce from file - Open .blend file - Switch to rendered mode Test File: [#91064.blend](https://archive.blender.org/developer/F10357381/T91064.blend)
Author
Contributor

Added subscriber: @Eary

Added subscriber: @Eary

#91800 was marked as duplicate of this issue

#91800 was marked as duplicate of this issue

#91737 was marked as duplicate of this issue

#91737 was marked as duplicate of this issue

#91736 was marked as duplicate of this issue

#91736 was marked as duplicate of this issue

#91593 was marked as duplicate of this issue

#91593 was marked as duplicate of this issue

#91141 was marked as duplicate of this issue

#91141 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm. Introduced between: b477333473 - eec1ea0ccf

Can confirm. Introduced between: b477333473 - eec1ea0ccf

Added subscriber: @ktdfly

Added subscriber: @ktdfly
Member

Possibly caused by {cd118c5581}?
(not bisected btw)

Will set this to high priority since this is introduced recently.

Possibly caused by {cd118c5581}? (not bisected btw) Will set this to high priority since this is introduced recently.

Added subscriber: @brecht

Added subscriber: @brecht

Yep, looks like cd118c5581. I'll try to resolve the issue (again).

@Eary As a temporary solution, connect a Normal Map node as a Normal input:
Screenshot from 2021-08-31 17-39-50.png

@brecht Can we use ensure_valid_reflection() for all smooth shaded surfaces?

Yep, looks like cd118c5581. I'll try to resolve the issue (again). @Eary As a temporary solution, connect a Normal Map node as a Normal input: ![Screenshot from 2021-08-31 17-39-50.png](https://archive.blender.org/developer/F10357875/Screenshot_from_2021-08-31_17-39-50.png) @brecht Can we use `ensure_valid_reflection()` for all smooth shaded surfaces?

@ktdfly, that seems reasonable. We just need to measure the performance impact and check it with the regression tests and benchmark scenes.

@ktdfly, that seems reasonable. We just need to measure the performance impact and check it with the regression tests and benchmark scenes.

Added subscriber: @derekbarker

Added subscriber: @derekbarker

Does enabling ensure_valid_reflection() force tangent space to be calculated? Because that is a pretty slow part of Cycles (For denser meshes or large scenes) I have had production scenes take 40+ minutes to synchronize in the past because of tangent space, Lukas Stockner did a lot to optimize it but its still a weak point in larger renders if you are using normal maps.

MZw0y2wS9m.mp4

Does enabling `ensure_valid_reflection()` force tangent space to be calculated? Because that is a pretty slow part of Cycles (For denser meshes or large scenes) I have had production scenes take 40+ minutes to synchronize in the past because of tangent space, Lukas Stockner did a lot to optimize it but its still a weak point in larger renders if you are using normal maps. [MZw0y2wS9m.mp4](https://archive.blender.org/developer/F10359149/MZw0y2wS9m.mp4)

No, ensure_valid_reflection does not require any tangents.

No, `ensure_valid_reflection` does not require any tangents.

Added subscriber: @Florian-10

Added subscriber: @Florian-10

Can confirm the bug

Can confirm the bug
Member

Closed as duplicate of #91141

Closed as duplicate of #91141
Member

Added subscriber: @leesonw

Added subscriber: @leesonw
Member

Hi Sorry I did not mean to close this I was trying to merge and close the other task.

Hi Sorry I did not mean to close this I was trying to merge and close the other task.
Member

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'
Member

Added subscriber: @thierrykobyleski

Added subscriber: @thierrykobyleski
Member

Added subscriber: @pawel.palenica

Added subscriber: @pawel.palenica
Member

Added subscriber: @dodilby

Added subscriber: @dodilby
Member

Added subscriber: @Yingkun

Added subscriber: @Yingkun
Member

Added subscriber: @SunnyWong

Added subscriber: @SunnyWong

This issue was referenced by blender/cycles@02cdea73df

This issue was referenced by blender/cycles@02cdea73dfb9881b85275ba8a947608312b6f534

This issue was referenced by ca0450feef

This issue was referenced by ca0450feeffdb07eea11c17aa617bfd7b9a04913

This issue was referenced by None@62714

This issue was referenced by None@62714
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
William Leeson self-assigned this 2021-10-06 10:36:59 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91064
No description provided.